@@ -55,6 +55,15 @@ flag = {
 };
 
 flag = {
+    name      = unprivport;
+    value     = u;
+    descrip   = "Use an unprivileged port";
+    doc = <<-  _EndOfDoc_
+	Use an unprivilegded UDP port for our queries.
+	_EndOfDoc_;
+};
+
+flag = {
     name      = normalverbose;
     value     = v;
     flags-cant = extraverbose, megaverbose;
@@ -176,14 +185,7 @@ UTC) to the standard output in a format like
 .BR "'1996 Oct 15 20:17:25.123 + 4.567 +/- 0.089 secs'" ,
 where the
 .B "'+ 4.567 +/- 0.089 secs'"
-indicates the estimated error in the time on the local system.  In daemon mode,
-it will add drift information in a format like
-.BR "' + 1.3 +/- 0.1 ppm'" ,
-and display this at roughly
-.I separation
-intervals (see under the
-.B \-x
-option for details).
+indicates the estimated error in the time on the local system.
 .TP
 .BI \-l " lockfile"
 sets the name of the lock file to ensure that there is only
@@ -229,40 +231,6 @@ sets a rough limit on the total running time to
 seconds.  Acceptable values are from 1 to 3600, and the default is 15 if a NTP
 host is specified and 300 otherwise.
 .TP
-.BI \-x " separation"
-causes the program to run as a daemon (i.e. forever), and to estimate and 
-correct for the clock drift.
-.I separation
-sets the minimum time between calls to the server in minutes if a NTP host is
-specified, and between broadcast packets if not.  Acceptable values are from 1
-to 1440 (a day), and the default (if
-.B \-x
-is specified but
-.I separation
-is omitted) is 300.
-.TP
-.BI \-f " savefile"
-may be used with the
-.B \-x
-option to store a record of previous packets, which speeds up recalculating
-the drift after
-.I sntp
-has to be restarted (e.g. because of network or server outages).  In order to
-restart the data,
-.I sntp
-must be restarted reasonably soon after it died (within a few times the value of
-.IR separation ),
-with the same value of the
-.B \-c
-option, the same value of
-.IR separation ,
-in the same mode (i.e. broadcast or client), though the NTP servers need not
-be the same for client mode, and with compatible values of other settings.
-Note that the file will be created with the default ownerships and permissions,
-using standard C facilities.  The default is installation-dependent, but will
-usually be
-.IR /etc/sntp.state .
-.TP
 .B -4
 force IPv4 DNS resolution.
 .TP
@@ -294,16 +262,6 @@ In update mode,
 .B maxerr
 must be less than
 .BR prompt.
-.IP
-In daemon mode (i.e. when
-.B \-x
-is specified),
-.B minerr
-must be less than
-.B maxerr
-which must be less than
-.B separation
-(note that this is in minutes, not seconds, but the numeric value is compared).
 .PP
 Note that none of the above values are closely linked to the limits described
 in the NTP protocol (RFC 1305).
@@ -312,12 +270,6 @@ The simplest use of this program is as an unprivileged command to check the
 current time and error in the local clock.  For example:
 .IP
 .B sntp ntpserver.somewhere
-.PP
-It can be run as a unprivileged background process to check on the clock drift
-as well as the current error; this will probably fail if the local clock is
-reset while it is running.  For example:
-.IP
-.B sntp -x ntpserver.somewhere > output 2>\&1 \&
 .PP
 With suitable privilege, it can be run as a command or in a
 .I cron
@@ -328,10 +280,6 @@ and
 commands.  For example:
 .IP
 .B sntp -a ntpserver.somewhere
-.PP
-It can also be run as a daemon to keep the local clock in step.  For example:
-.IP
-.B sntp -a -x ntpserver.somewhere > output 2>\&1 \&
 .PP
 More information on how to use this utility is given in the
 .I README
