@@ -110,6 +110,8 @@ void display_sock_in_hex (struct sockaddr_in *sock) {
 }
 #endif
 
+extern int unprivport;
+
 #ifdef HAVE_IPV6
 
 void open_socket (int which, char *hostname, int timespan) {
@@ -145,7 +147,7 @@ be reset before use in server mode. */
 
     memset(&here[which], 0, sizeof(struct sockaddr_storage));
     here[which] = anywhere;
-    if (operation != op_listen)
+    if (operation != op_listen || unprivport)
         ((struct sockaddr_in6 *)&here[which])->sin6_port = 0;
     memset(&there[which], 0, sizeof(struct sockaddr_storage));
     there[which] = address;
@@ -210,7 +212,7 @@ number is in network format. */
     memset(&here[which],0,sizeof(struct sockaddr_in));
     here[which].sin_family = AF_INET;
     here[which].sin_port =
-        (operation == op_listen ? port : 0);
+        (operation == op_listen || !unprivport ? port : 0);
     here[which].sin_addr = anywhere;
     memset(&there[which],0,sizeof(struct sockaddr_in));
     there[which].sin_family = AF_INET;
